Fixed folder setting response
No longer relaunches. Also removed commented out code.